# cw_drf

./: .coverage  .env_sample  README.MD  docker-compose.yaml  dockerfile  pyproject.toml
config/: celery.py  settings.py  urls.py
mainapp/: models.py  pagination.py  permissions.py  serializer.py  tasks.py  tests.py  urls.py  validators.py  views.py
mainapp/migrations/: 0001_initial.py  0002_remove_habit_duration_remove_habit_linked_habit_and_more.py  0003_alter_habit_related_habit.py  0004_habit_is_sent.py  0005_habit_last_sent_time.py
users/: admin.py  models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_and_more.py  0003_user_tg_chat_id.py
